--- a/pom.xml
+++ b/pom.xml
@@ -153,6 +153,12 @@
         <!--<artifactId>spring-security-test</artifactId>-->
         <!--<scope>test</scope>-->
         <!--</dependency>-->
+
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <version>3.5.1</version>
+        </dependency>
     </dependencies>
 
     <build>
