--- a/pom.xml
+++ b/pom.xml
@@ -193,6 +193,11 @@
             <artifactId>guava</artifactId>
             <version>24.0-jre</version>
         </dependency>
+        <dependency>
+            <groupId>org.dom4j</groupId>
+            <artifactId>dom4j</artifactId>
+            <version>2.1.0</version>
+        </dependency>
     </dependencies>
 
     <build>
