--- a/pom.xml
+++ b/pom.xml
@@ -198,6 +198,11 @@
             <artifactId>dom4j</artifactId>
             <version>2.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>net.jpountz.lz4</groupId>
+            <artifactId>lz4</artifactId>
+            <version>1.3.0</version>
+        </dependency>
     </dependencies>
 
     <build>
